syntax = "proto3";

package hnclone;

option java_multiple_files = true;
option java_package = "com.asadmshah.hnclone.models";
option optimize_for = LITE_RUNTIME;

message Post {
    uint32      id              = 1;
    double      timestamp       = 2;
    string      title           = 3;
    string      url             = 4;
    string      text            = 5;
    uint32      score           = 6;
    uint32      user_id         = 7;
    string      user_name       = 8;
    bool        upvoted         = 10;
}

message PostCreateRequest {
    string      title           = 1;
    string      url             = 2;
    string      text            = 3;
}

message PostVoteIncrementRequest {
    uint32      id              = 1;
}

message PostVoteDecrementRequest {
    uint32      id              = 1;
}

message PostVoteRemoveRequest {
    uint32      id              = 1;
}

message PostScoreResponse {
    uint32      id              = 1;
    uint32      score           = 2;
    bool        upvoted         = 3;
}

message PostDeleteRequest {
    uint32      id              = 1;
}

message PostDeleteResponse {
    uint32      id              = 1;
    bool        deleted         = 2;
}

message PostReadRequest {
    uint32      id              = 1;
}

message PostReadListRequest {
    uint32      limit           = 1;
    uint32      offset          = 2;
}

message PostReadListFromUserRequest {
    uint32      id              = 1;
    uint32      limit           = 2;
    uint32      offset          = 3;
}
