syntax = "proto3";

package hnclone;

option java_multiple_files = true;
option java_package = "com.asadmshah.hnclone.models";
option optimize_for = LITE_RUNTIME;

message PostScore {
    uint32 id = 1;
    int32 score = 2;
}