syntax = "proto3";

package hnclone;

option java_package = "com.asadmshah.hnclone.models";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME;

message SessionToken {
    bytes data = 1;
    bytes sign = 2;
}